# bottlerocket-core-kit

sources/: Cargo.toml
sources/api/pluto/: Cargo.toml
sources/api/shibaken/: Cargo.toml
sources/imdsclient/: Cargo.toml
sources/imdsclient/src/: lib.rs
