[package]
name = "imdsclient"
version = "0.1.0"
authors = ["Patrick J.P. Culp <jpculp@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
build = "build.rs"
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[features]
fips = ["dep:rustls", "rustls/fips", "dep:aws-lc-rs", "aws-lc-rs/fips", "aws-lc-rs/bindgen"]

[dependencies]
aws-lc-rs = { workspace = true, optional = true }
http.workspace = true
log.workspace = true
reqwest.workspace = true
rustls = { workspace = true, optional = true }
serde_json.workspace = true
snafu.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tokio-retry.workspace = true

[build-dependencies]
generate-readme.workspace = true

[dev-dependencies]
httptest.workspace = true
tokio-test.workspace = true
